--- a/app/spec/api.yml
+++ b/app/spec/api.yml
@@ -45,6 +45,50 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/error'
+
+  /emulation-output:
+    post:
+      description: try to get the emulation output after unpacking the file
+      operationId: emulationOutput
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              required:
+              - file
+              properties:
+                file:
+                  type: string
+                  description: file
+                  format: binary
+        required: true
+
+      responses:
+        200:
+          description: emulation output after unpacking the file
+          content:
+            '*/*':
+              schema:
+                required:
+                - output
+                properties:
+                  output:
+                    type: array
+                    items:
+                      type: string
+        400:
+          description: request error
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/error'
+        500:
+          description: server error
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/error'
+
   /clean:
     head:
       description: clean up the uploaded files
@@ -58,6 +102,7 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/error'
+
 components:
   schemas:
     error:
