--- a/app/spec/api.yml
+++ b/app/spec/api.yml
@@ -103,8 +103,77 @@ paths:
               schema:
                 $ref: '#/components/schemas/error'
 
+  /generate-yara-rules:
+    post:
+      description: generate yara rules for give executable
+      operationId: generateYaraRule
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              required:
+              - file
+              properties:
+                file:
+                  type: string
+                  description: file
+                  format: binary
+                is_unpacking_required:
+                  type: boolean
+                minimum_string_length:
+                  type: integer
+                  min: 1
+                  default: 4
+                strings_to_ignore:
+                  type: array 
+                  items:
+                    type: string
+                  minItems: 0
+                  maxItems: 1000
+
+      responses:
+        200:
+          description: Yara rules
+          content:
+            '*/*':
+              schema:
+                properties:
+                  rules:
+                    type: array 
+                    items:
+                      $ref: '#/components/schemas/yara'
+                    minItems: 1
+        400:
+          description: request error
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/error'
+        500:
+          description: server error
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/error'
+
 components:
   schemas:
+    yara:
+      required:
+      - name
+      - meta
+      - strings
+      properties:
+        name:
+          type: string
+          description: Yara rule name
+        meta:
+          type: string
+          description: Yara rule meta data section
+        strings:
+          type: string
+          description: Yara rule meta string section    
     error:
       required:
       - status
