--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint --ext ts .",
     "lint-fix": "eslint --fix --ext ts .",
     "fmt": "prettier --write --parser typescript --config .prettierrc '**/*.ts'",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "test": "jest --runInBand --config=jest.config.js --detectOpenHandles --forceExit "
   },
   "dependencies": {
     "body-parser": "1.19.0",
@@ -21,16 +22,22 @@
     "express-openapi-validator": "4.11.0"
   },
   "devDependencies": {
-    "@types/body-parser": "^1.19.0",
+    "@types/body-parser": "1.19.0",
     "@types/cors": "2.8.10",
     "@types/debug": "4.1.5",
     "@types/express": "4.17.11",
+    "@types/jest": "26.0.20",
+    "@types/supertest": "2.0.10",
     "@typescript-eslint/eslint-plugin": "4.15.2",
     "@typescript-eslint/parser": "4.15.2",
     "eslint": "7.20.0",
     "eslint-config-prettier": "8.0.0",
     "eslint-plugin-prettier": "3.3.1",
+    "form-data": "4.0.0",
+    "jest": "26.6.3",
     "prettier": "2.2.1",
+    "supertest": "6.1.3",
+    "ts-jest": "26.5.3",
     "typescript": "4.1.5"
   }
 }
