--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -15,7 +15,7 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "types": ["node"]
+    "types": ["node", "expect", "jest"]
   },
   "include": ["./index.ts"]
 }
