--- a/app/spec/api.yml
+++ b/app/spec/api.yml
@@ -105,7 +105,7 @@ paths:
   /generate-partial-yara-rules:
     post:
       description: generate partial YARA rules for give executable. (Rule without the condition section)
-      operationId: generateYaraRule
+      operationId: generatePartialYaraRule
       requestBody:
         required: true
         content:
